--- a/src/components/alg/alg-ta/ta2/pages/elem-l2bdz.html
+++ b/src/components/alg/alg-ta/ta2/pages/elem-l2bdz.html
@@ -17,15 +17,10 @@
 
       <a href="#t1">A. Количество равных максимальному</a>
   <br><a href="#t2">B. Дома и магазины</a>
+  <br><a href="#t3">C. Изготовление палиндромов</a>
+  <br><a href="#t4">D. Лавочки в атриуме</a>
+  <br><a href="#t5">E. Дипломы в папках</a>
 </article>
-
-
-<!-- A. Количество равных максимальному -->
-<article class="article">
-  <div class="anchor" id="t1"></div>
-  <h3>A. Количество равных максимальному</h3>
-
-  <div class="time-memory">(Время 1с. Память 64мб)</div>
 
 
 <!-- A. Количество равных максимальному -->
@@ -65,5 +60,148 @@
 0
 </pre>
     <code>2</code>
+  </details>
+</article>
+
+
+<!-- B. Дома и магазины -->
+<article class="article">
+  <div class="anchor" id="t2"></div>
+  <h3>B. Дома и магазины</h3>
+
+  <div class="time-memory">(Время 1с. Память 64мб)</div>
+
+  <p>На Новом проспекте построили подряд 10 зданий. Каждое здание может быть либо жилым домом, либо магазином, либо офисным зданием.</p>
+
+  <p>Но оказалось, что жителям некоторых домов на Новом проспекте слишком далеко приходится идти до ближайшего магазина. Для разработки плана развития общественного транспорта на Новом проспекте мэр города попросил вас выяснить, какое же наибольшее расстояние приходится преодолевать жителям Нового проспекта, чтобы дойти от своего дома до ближайшего магазина.</p>
+
+  <h4>Формат ввода</h4>
+  <p>Программа получает на вход десять чисел, разделенных пробелами. Каждое число задает тип здания на Новом проспекте: число 1 обозначает жилой дом, число 2 обозначает магазин, число 0 обозначает офисное здание. Гарантируется, что на Новом проспекте есть хотя бы один жилой дом и хотя бы один магазин.</p>
+
+  <h4>Формат вывода</h4>
+  <p>Выведите одно целое число: наибольшее расстояние от дома до ближайшего к нему магазина. Расстояние между двумя соседними домами считается равным 1 (то есть если два дома стоят рядом, то между ними расстояние 1, если между двумя домами есть еще один дом, то расстояние между ними равно 2 и т.д.)</p>
+
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+    <code>2 0 1 1 0 1 0 2 1 2</code>
+    <code>3</code>
+    <p>В примере из условия дальше всего идти до ближайшего магазина жителям четвертого дома: ближайший к их дому магазин находится в первом доме, и им нужно пройти три дома до него. Жителям других домов придется пройти меньшее расстояние до ближайшего магазина, поэтому ответ 3.</p>
+  </details>
+</article>
+
+
+<!-- C. Изготовление палиндромов -->
+<article class="article">
+  <div class="anchor" id="t3"></div>
+  <h3>C. Изготовление палиндромов</h3>
+
+  <div class="time-memory">(Время 2с. Память 512мб)</div>
+
+  <p>В строкоремонтную мастерскую принесли строку, состоящую из строчных латинских букв. Заказчик хочет сделать из неё палиндром. В мастерской могут за 1 байтландский тугрик заменить произвольную букву в строке любой выбранной заказчиком буквой.</p>
+
+  <p>Какую минимальную сумму придётся заплатить заказчику за ремонт строки?</p>
+
+  <p>Напомним, что палиндромом называется строка, которая равна самой себе, прочитанной в обратном направлении.</p>
+
+  <h4>Формат ввода</h4>
+  <p>Входные данные содержат непустую строку, состоящую из строчных латинских букв, которую принёс заказчик. Длина строки не превосходит 10<sup>4</sup>.</p>
+
+  <h4>Формат вывода</h4>
+  <p>Выведите одно целое число — минимальную сумму, которую заказчику придётся заплатить за превращение принесённой заказчиком строки в палиндром.</p>
+
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+    <code>a</code>
+    <code>0</code>
+
+    <h4>Пример 2</h4>
+    <code>ab</code>
+    <code>1</code>
+
+    <h4>Пример 3</h4>
+    <code>cognitive</code>
+    <code>4</code>
+  </details>
+</article>
+
+
+<!-- D. Лавочки в атриуме -->
+<article class="article">
+  <div class="anchor" id="t4"></div>
+  <h3>D. Лавочки в атриуме</h3>
+
+  <div class="time-memory">(Время 1с. Память 64мб)</div>
+
+  <p>В атриуме нового корпуса ФНК урбанисты установили модные гранитные лавочки (на которых холодно сидеть зимой и жарко летом). Лавочка устроена следующим образом: несколько одинаковых кубических гранитных блоков ставятся в ряд, а на них кладется гранитная плита.</p>
+
+  <p>При этом блоки располагаются так, чтобы плита не падала: для этого достаточно, чтобы и слева, и справа от центра плиты был хотя бы один гранитный блок или его часть (в частности, если центр плиты приходится на середину какого-нибудь блока, то и слева, и справа от центра плиты находится часть блока, и плита не падает).</p>
+
+  <p>На ФНК много певокурсников (но это только пока не произошли отчисления за списывания на курсе ОиМП) и им не хватает стульев в аудиториях. Студенты обнаружили, что блоки можно использовать в аудитории в качестве сиденья. Можно по одному вытаскивать блоки, находящиеся с краю (как слева, так и справа). Они хотят вытащить из-под лавочки как можно больше блоков так, чтобы она при этом не упала (передвигать оставшиеся блоки нельзя). Определите, какие блоки они должны оставить.</p>
+
+  <h4>Формат ввода</h4>
+  <p>В первой строке входных данных содержатся два числа: L — длина лавочки и K — количество гранитных блоков-ножек. Оба числа натуральные и не превышают 10 000.</p>
+
+  <p>Во второй строке следуют K различных целых неотрицательных чисел, задающих положение каждой ножки. Положение ножки определяется расстоянием от левого края плиты до левого края ножки (ножка — это куб размером 1x1x1). Ножки перечислены слева направо (то есть начиная с ножки с меньшим расстоянием до левого края).</p>
+
+  <h4>Формат вывода</h4>
+  <p>Требуется перечислить ножки, которые студентам нужно оставить. Для каждой ножки нужно выдать ее положение, как оно задано во входных данных. Ножки следует перечислять слева направо, в том порядке, в котором они встречаются во входных данных.</p>
+
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+<pre>
+5 2
+0 2
+</pre>
+    <code>2</code>
+
+    <h4>Пример 2</h4>
+<pre>
+13 4
+1 4 8 11
+</pre>
+    <code>4 8</code>
+
+    <h4>Пример 3</h4>
+<pre>
+14 6
+1 6 8 11 12 13
+</pre>
+    <code>6 8</code>
+  </details>
+</article>
+
+
+<!-- E. Дипломы в папках -->
+<article class="article">
+  <div class="anchor" id="t5"></div>
+  <h3>E. Дипломы в папках</h3>
+
+  <div class="time-memory">(Время 1с. Память 64мб)</div>
+
+  <p>В этом году Иван заканчивает школу и поступает в вуз. За время своей учебы он часто участвовал в олимпиадах по информатике и у него накопилось много дипломов. Иван раскладывал дипломы по папкам совершенно бессистемно, то есть любой диплом мог оказаться в любой из папок. К счастью, Иван помнит, сколько дипломов лежит в каждой из папок.</p>
+
+  <p>Иван хочет принести в приемную комиссию выбранного вуза папку, в которой находится диплом Московской олимпиады по программированию (такой диплом у Ивана ровно один). Для того чтобы понять, что в данной папке нужного диплома нет, Ивану нужно просмотреть все дипломы из этой папки. Просмотр одного диплома занимает у него ровно одну секунду и он может мгновенно переходить к просмотру следующей папки после окончания просмотра предыдущей. Порядок просмотра папок Иван может выбирать.</p>
+
+  <p>По заданному количеству дипломов в каждой из папок требуется определить, за какое наименьшее время в худшем случае Иван поймет, в какой папке содержится нужный ему диплом.</p>
+
+  <h4>Формат ввода</h4>
+  <p>В первой строке входного файла записано целое число N (1 ≤ N ≤ 100) - количество папок. Во второй строке записаны N целых чисел a1, a2, ..., aN (1 ≤ ai ≤ 100) - количество дипломов в каждой из папок.</p>
+
+  <h4>Формат вывода</h4>
+  <p>Выведите одно число - минимальное количество секунд, необходимое Ивану в худшем случае для определения того, в какой папке содержится диплом.</p>
+
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+<pre>
+2
+2 1
+</pre>
+    <code>1</code>
+    <p>В примере Иван может просмотреть папку 2 за 1 секунду и, не найдя там диплома, понять, что диплом находится в папке 1.</p>
+    <p>Если же он найдет диплом в папке 2, то на поиск уйдет также 1 секунда.</p>
   </details>
 </article>
