--- a/src/components/alg/alg-ta/ta2/pages/elem-l4adz.html
+++ b/src/components/alg/alg-ta/ta2/pages/elem-l4adz.html
@@ -10,3 +10,181 @@
   <p><a href="https://contest.yandex.ru/contest/28969/problems/" target="_blank">contest.yandex.ru/contest/28969/problems</a></p>
 </article>
 
+
+<!-- Содержание -->
+<article class="article">
+  <h3>Содержание</h3>
+
+      <a href="#t1">A. Палиндром</a>
+  <br><a href="#t2">B. Головоломка</a>
+  <br><a href="#t3">C. Драгоценные камни</a>
+  <br><a href="#t4">D. Числа</a>
+</article>
+
+
+<!-- A. Палиндром -->
+<article class="article">
+  <div class="anchor" id="t1"></div>
+  <h3>A. Палиндром</h3>
+
+  <div class="time-memory">(Время 1с. Память 64мб)</div>
+
+  <p>Палиндром - это строка, которая читается одинаково как справа налево, так и слева направо.</p>
+
+  <p>На вход программы поступает набор больших латинских букв (не обязательно различных). Разрешается переставлять буквы, а также удалять некоторые буквы. Требуется из данных букв по указанным правилам составить палиндром наибольшей длины, а если таких палиндромов несколько, то выбрать первый из них в алфавитном порядке.</p>
+
+  <h4>Формат ввода</h4>
+  <p>В первой строке входных данных содержится число N (1 ≤ N ≤ 100000). Во второй строке задается последовательность из N больших латинских букв (буквы записаны без пробелов).</p>
+
+  <h4>Формат вывода</h4>
+  <p>В единственной строке выходных данных выдайте искомый палиндром.</p>
+
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+<pre>
+3
+AAB
+</pre>
+    <code>ABA</code>
+
+    <h4>Пример 2</h4>
+<pre>
+6
+QAZQAZ
+</pre>
+    <code>AQZZQA</code>
+
+    <h4>Пример 3</h4>
+<pre>
+6
+ABCDEF
+</pre>
+    <code>A</code>
+  </details>
+</article>
+
+
+<!-- B. Головоломка -->
+<article class="article">
+  <div class="anchor" id="t2"></div>
+  <h3>B. Головоломка</h3>
+
+  <div class="time-memory">(Время 1с. Память 64мб)</div>
+
+  <p>Петя разгадывает головоломку, которая устроена следующим образом. Дана квадратная таблица размера NxN, в каждой клетке которой записана какая-нибудь латинская буква. Кроме того, дан список ключевых слов. Пете нужно, взяв очередное ключевое слово, найти его в таблице. То есть найти в таблице все буквы этого слова, причем они должны быть расположены так, чтобы клетка, в которой расположена каждая последующая буква слова, была соседней с клеткой, в которой записана предыдущая буква (клетки называются соседними, если они имеют общую сторону — то есть соседствуют по вертикали или по горизонтали). Например, на рисунке ниже показано, как может быть расположено в таблице слово olympiad.</p>
+
+<pre>
+POLTE
+RWYMS
+OAIPT
+BDANR
+LEMES
+</pre>
+
+  <p>Когда Петя находит слово, он вычеркивает его из таблицы. Использовать уже вычеркнутые буквы в других ключевых словах нельзя.</p>
+
+  <p>После того, как найдены и вычеркнуты все ключевые слова, в таблице остаются еще несколько букв, из которых Петя должен составить слово, зашифрованное в головоломке.</p>
+
+  <p>Помогите Пете в решении этой головоломки, написав программу, которая по данной таблице и списку ключевых слов выпишет, из каких букв Петя должен сложить слово, то есть какие буквы останутся в таблице после вычеркивания ключевых слов.</p>
+
+  <h4>Формат ввода</h4>
+  <p>В первой строке входного файла записаны два числа N (1 ≤ N ≤ 10) и M (0 ≤ M ≤ 200). Следующие N строк по N заглавных латинских букв описывают ребус. Следующие M строк содержат слова. Слова состоят только из заглавных латинских букв, каждое слово не длиннее 200 символов. Гарантируется, что в таблице можно найти и вычеркнуть по описанным выше правилам все ключевые слова.</p>
+
+  <h4>Формат вывода</h4>
+  <p>В единственную строку выходного файла выведите в любом порядке буквы, которые останутся в таблице.</p>
+
+  <details>
+    <summary>Примеры</summary>
+<pre>
+5 3
+POLTE
+RWYMS
+OAIPT
+BDANR
+LEMES
+OLYMPIAD
+PROBLEM
+TEST
+</pre>
+    <code>AENRSW</code>
+  </details>
+</article>
+
+
+<!-- C. Драгоценные камни -->
+<article class="article">
+  <div class="anchor" id="t3"></div>
+  <h3>C. Драгоценные камни</h3>
+
+  <div class="time-memory">(Время 1с. Память 64мб)</div>
+
+  <p>В одной далекой восточной стране до сих пор по пустыням ходят караваны верблюдов, с помощью которых купцы перевозят пряности, драгоценности и дорогие ткани. Разумеется, основная цель купцов состоит в том, чтобы подороже продать имеющийся у них товар. Недавно один из караванов прибыл во дворец одного могущественного шаха.</p>
+
+  <p>Купцы хотят продать шаху n драгоценных камней, которые они привезли с собой. Для этого они выкладывают их перед шахом в ряд, после чего шах оценивает эти камни и принимает решение о том, купит он их или нет. Видов драгоценных камней на Востоке известно не очень много всего 26, поэтому мы будем обозначать виды камней с помощью строчных букв латинского алфавита. Шах обычно оценивает камни следующим образом. Он заранее определил несколько упорядоченных пар типов камней: (a1, b1), (a2, b2), ..., (ak, bk). Эти пары он называет красивыми, их множество мы обозначим как P. Теперь представим ряд камней, которые продают купцы, в виде строки S длины n из строчных букв латинского алфавита. Шах считает число таких пар (i, j), что 1 ≤ i &lt; j ≤ n, а камни Si и Sj образуют красивую пару, то есть существует такое число 1 ≤ q ≤ k, что Si = aq и Sj = bq.</p>
+
+  <p>Если число таких пар оказывается достаточно большим, то шах покупает все камни. Однако в этот раз купцы привезли настолько много камней, что шах не может посчитать это число. Поэтому он вызвал своего визиря и поручил ему этот подсчет. Напишите программу, которая находит ответ на эту задачу.</p>
+
+  <h4>Формат ввода</h4>
+  <p>Первая строка входного файла содержит целые числа n и k (1 ≤ n ≤ 100000, 1 ≤ k ≤ 676) число камней, которые привезли купцы и число пар, которые шах считает красивыми. Вторая строка входного файла содержит строку S, описывающую типы камней, которые привезли купцы.</p>
+
+  <p>Далее следуют k строк, каждая из которых содержит две строчных буквы латинского алфавита и описывает одну из красивых пар камней.</p>
+
+  <h4>Формат вывода</h4>
+  <p>В выходной файл выведите ответ на задачу — количество пар, которое должен найти визирь.</p>
+
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+<pre>
+7 1
+abacaba
+aa
+</pre>
+    <code>6</code>
+
+    <h4>Пример 2</h4>
+<pre>
+7 3
+abacaba
+ab
+ac
+bb
+</pre>
+    <code>7</code>
+  </details>
+</article>
+
+
+<!-- D. Числа -->
+<article class="article">
+  <div class="anchor" id="t4"></div>
+  <h3>D. Числа</h3>
+
+  <div class="time-memory">(Время 1с. Память 64мб)</div>
+
+  <p>Саша и Катя учатся в начальной школе. Для изучения арифметики при этом используются карточки, на которых написаны цифры (на каждой карточке написана ровно одна цифра). Однажды они пришли на урок математики, и Саша, используя все свои карточки, показал число A, а Катя показала число B. Учитель тогда захотел дать им такую задачу, чтобы ответ на нее смогли показать и Саша, и Катя, каждый используя только свои карточки. При этом учитель хочет, чтобы искомое число было максимально возможным.</p>
+
+  <h4>Формат ввода</h4>
+  <p>Во входном файле записано два целых неотрицательных числа A и B (каждое число в одной строке). Длина каждого из чисел не превосходит 100000 цифр.</p>
+
+  <h4>Формат вывода</h4>
+  <p>Выведите одно число — максимальное целое число, которое можно составить используя как цифры первого числа, так и цифры второго числа. Если же ни одного такого числа составить нельзя, выведите -1.</p>
+
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+<pre>
+280138
+798081
+</pre>
+    <code>8810</code>
+
+    <h4>Пример 2</h4>
+<pre>
+  123
+  456
+</pre>
+    <code>-1</code>
+  </details>
+</article>
