--- a/src/components/alg/alg-ta/ta2/pages/elem-l3adz.html
+++ b/src/components/alg/alg-ta/ta2/pages/elem-l3adz.html
@@ -10,3 +10,273 @@
   <p><a href="https://contest.yandex.ru/contest/28963/problems/" target="_blank">contest.yandex.ru/contest/28963/problems</a></p>
 </article>
 
+
+<!-- Содержание -->
+<article class="article">
+  <h3>Содержание</h3>
+
+      <a href="#t1">A. Угадай число - 2</a>
+  <br><a href="#t2">B. Мультиграф</a>
+  <br><a href="#t3">C. Забастовки</a>
+  <br><a href="#t4">D. Жребий Крижановского</a>
+  <br><a href="#t5">E. Фибоначчи возвращается</a>
+</article>
+
+
+<!-- A. Угадай число - 2 -->
+<article class="article">
+  <div class="anchor" id="t1"></div>
+  <h3>A. Угадай число - 2</h3>
+
+  <div class="time-memory">(Время 1с. Память 256мб)</div>
+
+  <p>Август загадал натуральное число от 1 до n. Беатриса пытается угадать это число, для этого она называет некоторые множества натуральных чисел. Август отвечает Беатрисе YES, если среди названных ей чисел есть задуманное или NO в противном случае. После нескольких заданных вопросов Беатриса запуталась в том, какие вопросы она задавала и какие ответы получила и просит вас помочь ей определить, какие числа мог задумать Август.</p>
+
+  <p>Август и Беатриса продолжают играть в игру, но Август начал жульничать. На каждый из вопросов Беатрисы он выбирает такой вариант ответа YES или NO, чтобы множество возможных задуманных чисел оставалось как можно больше. Например, если Август задумал число от 1 до 5, а Беатриса спросила про числа 1 и 2, то Август ответит NO, а если Беатриса спросит про 1, 2, 3, то Август ответит YES. Если же Бетриса в своем вопросе перечисляет ровно половину из задуманных чисел, то Август из вредности всегда отвечает NO. Наконец, Август при ответе учитывает все предыдущие вопросы Беатрисы и свои ответы на них, то есть множество возможных задуманных чисел уменьшается.</p>
+
+  <h4>Формат ввода</h4>
+  <p>Вам дана последовательность вопросов Беатрисы. Приведите ответы Августа на них. Первая строка входных данных содержит число n — наибольшее число, которое мог загадать Август. Далее идут строки, содержащие вопросы Беатрисы. Каждая строка представляет собой набор чисел, разделенных пробелами. Последняя строка входных данных содержит одно слово HELP.</p>
+
+  <h4>Формат вывода</h4>
+  <p>Для каждого вопроса Беатрисы выведите ответ Августа на этот вопрос. После этого выведите (через пробел, в порядке возрастания) все числа, которые мог загадать Август после ответа на все вопросы Беатрисы.</p>
+
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+<pre>
+10
+1 2 3 4 5
+2 4 6 8 10
+HELP
+</pre>
+<pre>
+NO
+YES
+6 8 10
+</pre>
+
+    <h4>Пример 2</h4>
+<pre>
+10
+1
+2
+3
+4
+5
+6
+7
+8
+9
+HELP
+</pre>
+<pre>
+NO
+NO
+NO
+NO
+NO
+NO
+NO
+NO
+NO
+10
+</pre>
+
+    <h4>Пример 3</h4>
+<pre>
+16
+1 2 3 4 5 6 7 8
+9 10 11 12
+13 14
+16
+HELP
+</pre>
+<pre>
+NO
+NO
+NO
+NO
+15
+</pre>
+  </details>
+</article>
+
+
+<!-- B. Мультиграф -->
+<article class="article">
+  <div class="anchor" id="t2"></div>
+  <h3>B. Мультиграф</h3>
+
+  <div class="time-memory">(Время 1с. Память 64мб)</div>
+
+  <p>Дан неориентированный невзвешенный граф. В графе возможны петли и кратные рёбра. Постройте такой новый граф без петель и кратных рёбер, что для любых двух вершин в нём расстояние равно расстоянию в исходном графе. Если вершины не связны, расстояние между ними бесконечность.</p>
+
+  <h4>Формат ввода</h4>
+  <p>На первой строке число вершин n и число рёбер m (1 ≤ n, m ≤ 100000). Следующие m строк содержат пары чисел от 1 до n – рёбра графа.</p>
+
+  <h4>Формат вывода</h4>
+  <p>Новый граф в таком же формате. Рёбра можно выводить в произвольном формате.</p>
+
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+<pre>
+3 5
+1 1
+1 3
+2 1
+1 2
+2 3
+</pre>
+<pre>
+3 3
+1 2
+1 3
+2 3
+</pre>
+  </details>
+</article>
+
+
+<!-- C. Забастовки -->
+<article class="article">
+  <div class="anchor" id="t3"></div>
+  <h3>C. Забастовки</h3>
+
+  <div class="time-memory">(Время 1.5с. Память 256мб)</div>
+
+  <p>Политическая жизнь одной страны очень оживленная. В стране действует K политических партий, каждая из которых регулярно объявляет национальную забастовку. Дни, когда хотя бы одна из партий объявляет забастовку, при условии, что это не суббота или воскресенье (когда и так никто не работает), наносят большой ущерб экономике страны. i-я партия объявляет забастовки строго каждые bi дней, начиная с дня с номером ai. То есть i-я партия объявляет забастовки в дни ai, ai+bi, ai+2bi и т.д. Если в какой-то день несколько партий объявляет забастовку, то это считается одной общенациональной забастовкой. В календаре страны N дней, пронумерованных от 1 до N. Первый день года является понедельником, шестой и седьмой дни года — выходные, неделя состоит из семи дней.</p>
+
+  <h4>Формат ввода</h4>
+  <p>Программа получает на вход число дней в году N (1 ≤ N ≤ 10<sup>6</sup>) и число политических партий K (1 ≤ K ≤ 100). Далее идет K строк, описывающие графики проведения забастовок. i-я строка содержит числа ai и bi (1 ≤ ai, bi ≤ N).</p>
+
+  <h4>Формат вывода</h4>
+  <p>Выведите единственное число: количество забастовок, произошедших в течение года.</p>
+
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+<pre>
+19 3
+2 3
+3 5
+9 8
+</pre>
+    <code>8</code>
+
+    <h4>Пример 2</h4>
+<pre>
+5 2
+1 2
+2 2
+</pre>
+    <code>5</code>
+
+    <h4>Пример 3</h4>
+<pre>
+1000 1
+1 1
+</pre>
+    <code>715</code>
+    <p>Первая партия объявляет забастовки в дни 2, 5, 8, 11, 14, 17. Вторая партия объявляет забастовки в дни 3, 8, 13, 18. Третья партия — в дни 9 и 17. Дни номер 6, 7, 13, 14 являются выходными. Таким образом, общенациональные забастовки пройдут в дни 2, 3, 5, 8, 9, 11, 17, 18.</p>
+  </details>
+</article>
+
+
+<!-- D. Жребий Крижановского -->
+<article class="article">
+  <div class="anchor" id="t4"></div>
+  <h3>D. Жребий Крижановского</h3>
+
+  <div class="time-memory">(Время 1с. Память 64мб)</div>
+
+  <p>Петя играет с друзьями в игру, которую иногда называют "Жребий Крижановского". Правила игры следующие: в каждом туре каждый игрок загадывает произвольное натуральное число. После этого игрок, загадавший минимальное число, которое не повторяется, выигрывает в этом туре, причем его выигрыш равен этому числу. Например, если играют 6 человек и были загаданы числа 3, 2, 1, 1, 4 и 2, то выиграл первый игрок, причем его выигрыш равен 3. Если все загаданные числа повторяются, то тур считается ничейным и никто баллов не получает.</p>
+
+  <p>Общий выигрыш игрока за игру равен сумме баллов за все сыгранные туры.</p>
+
+  <p>Петя с друзьями при игре просто называют по очереди загаданные ими числа, а потом определяют, кто выиграл, и подсчитывают баллы. Однако при таком формате игры в принципе можно сжульничать, не загадывая число заранее, а, уже зная числа, названные предыдущими игроками, выбрать себе оптимальное "загаданное" число. Этим и пользуется Петя. Он называет число последним и старается выбрать число так, чтобы максимизировать свой выигрыш.</p>
+
+  <p>Идет последний тур игры. Известны очки всех игроков перед этим туром и названные игроками числа. Выясните, какое число следует назвать Пете, чтобы по результатам игры у как можно большего числа игроков количество баллов было меньше, чем у него. Если таких чисел несколько, то Петя хочет назвать минимальное возможное.</p>
+
+  <h4>Формат ввода</h4>
+  <p>В первой строке вводится число n - количество игроков (2 ≤ n ≤ 100). Вторая строка содержит n чисел - баллы игроков перед последним туром (неотрицательные целые числа, не большие 100). Баллы перечислены в том порядке, в котором игроки обычно называют числа (то есть Петины баллы указаны последними). В третьей строке задано (n-1) число - числа, названные игроками в последнем туре (числа не превышают 100), в том порядке, в котором они их называли.</p>
+
+  <h4>Формат вывода</h4>
+  <p>Выведите число, которое следует назвать Пете.</p>
+
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+<pre>
+6
+0 0 0 0 0 0
+2 3 4 5 6
+</pre>
+    <code>1</code>
+
+    <h4>Пример 2</h4>
+<pre>
+6
+8 3 12 5 0 9
+2 1 3 1 4
+</pre>
+    <code>2</code>
+
+    <h4>Пример 3</h4>
+<pre>
+8
+0 0 0 0 0 0 0 0
+1 1 2 2 3 3 4
+</pre>
+    <code>1</code>
+  </details>
+</article>
+
+
+<!-- E. Фибоначчи возвращается -->
+<article class="article">
+  <div class="anchor" id="t5"></div>
+  <h3>E. Фибоначчи возвращается</h3>
+
+  <div class="time-memory">(Время 2с. Память 128мб)</div>
+
+  <p>Вам дается последовательность чисел. Для каждого числа определите, является ли оно числом Фибоначчи. Напомним, что числа Фибоначчи определяются так:</p>
+  <code>f0 = f1 = 1,</code>
+  <code>fn = fn-1 + fn-2.</code>
+
+  <h4>Формат ввода</h4>
+  <p>Первая строка содержит одно число N (1 ≤ N ≤ 10<sup>6</sup>) – количество запросов. Следующие N строк содержат по одному целому числу. При этом соблюдаются следующие ограничения:</p>
+  <ol>
+    <li>Размер каждого числа не превосходит 5000 цифр в десятичном представлении.</li>
+    <li>Размер входа не превышает 1 Мб.</li>
+  </ol>
+
+  <h4>Формат вывода</h4>
+  <p>Для каждого числа, данного во входном файле, выведите «Yes», если оно является числом Фибоначчи, и «No» в противном случае.</p>
+
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+<pre>
+8
+1
+2
+3
+4
+5
+6
+7
+8
+</pre>
+<pre>
+Yes
+Yes
+Yes
+No
+Yes
+No
+No
+Yes
+</pre>
+  </details>
+</article>
