--- a/src/components/alg/alg-ta/ta2/pages/elem-l3bdz.html
+++ b/src/components/alg/alg-ta/ta2/pages/elem-l3bdz.html
@@ -10,3 +10,220 @@
   <p><a href="https://contest.yandex.ru/contest/28964/problems/" target="_blank">contest.yandex.ru/contest/28964/problems</a></p>
 </article>
 
+
+<!-- Содержание -->
+<article class="article">
+  <h3>Содержание</h3>
+
+      <a href="#t1">A. Количество совпадающих</a>
+  <br><a href="#t2">B. Встречалось ли число раньше</a>
+  <br><a href="#t3">C. Уникальные элементы</a>
+  <br><a href="#t4">D. Угадай число</a>
+  <br><a href="#t5">E. Автомобильные номера</a>
+</article>
+
+
+<!-- A. Количество совпадающих -->
+<article class="article">
+  <div class="anchor" id="t1"></div>
+  <h3>A. Количество совпадающих</h3>
+
+  <div class="time-memory">(Время 3с. Память 64мб)</div>
+
+  <p>Даны два списка чисел, которые могут содержать до 100000 чисел каждый. Посчитайте, сколько чисел содержится одновременно как в первом списке, так и во втором. Примечание. Эту задачу на Питоне можно решить в одну строчку.</p>
+
+  <h4>Формат ввода</h4>
+  <p>Вводятся два списка чисел. Все числа каждого списка находятся на отдельной строке.</p>
+
+  <h4>Формат вывода</h4>
+  <p>Выведите ответ на задачу.</p>
+
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+<pre>
+1 3 2
+4 3 2
+</pre>
+    <code>2</code>
+
+    <h4>Пример 2</h4>
+<pre>
+1 2 6 4 5 7
+10 2 3 4 8
+</pre>
+    <code>2</code>
+
+    <h4>Пример 3</h4>
+<pre>
+1 7 3 8 10 2 5
+6 5 2 8 4 3 7
+</pre>
+    <code>5</code>
+  </details>
+</article>
+
+
+<!-- B. Встречалось ли число раньше -->
+<article class="article">
+  <div class="anchor" id="t2"></div>
+  <h3>B. Встречалось ли число раньше</h3>
+
+  <div class="time-memory">(Время 3с. Память 64мб)</div>
+
+  <p>Во входной строке записана последовательность чисел через пробел. Для каждого числа выведите слово YES (в отдельной строке), если это число ранее встречалось в последовательности или NO, если не встречалось.</p>
+
+  <h4>Формат ввода</h4>
+  <p>Вводится список чисел. Все числа списка находятся на одной строке.</p>
+
+  <h4>Формат вывода</h4>
+  <p>Выведите ответ на задачу.</p>
+
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+    <code>1 2 3 2 3 4</code>
+<pre>
+NO
+NO
+NO
+YES
+YES
+NO
+</pre>
+  </details>
+</article>
+
+
+<!-- C. Уникальные элементы -->
+<article class="article">
+  <div class="anchor" id="t3"></div>
+  <h3>C. Уникальные элементы</h3>
+
+  <div class="time-memory">(Время 3с. Память 64мб)</div>
+
+  <p>Дан список. Выведите те его элементы, которые встречаются в списке только один раз. Элементы нужно выводить в том порядке, в котором они встречаются в списке.</p>
+
+  <h4>Формат ввода</h4>
+  <p>Вводится список чисел. Все числа списка находятся на одной строке.</p>
+
+  <h4>Формат вывода</h4>
+  <p>Выведите ответ на задачу.</p>
+
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+    <code>1 2 2 3 3 3</code>
+    <code>1</code>
+
+    <h4>Пример 2</h4>
+    <code>4 3 5 2 5 1 3 5</code>
+    <code>4 2 1</code>
+  </details>
+</article>
+
+
+<!-- D. Угадай число -->
+<article class="article">
+  <div class="anchor" id="t4"></div>
+  <h3>D. Угадай число</h3>
+
+  <div class="time-memory">(Время 6с. Память 64мб)</div>
+
+  <p>Август и Беатриса играют в игру. Август загадал натуральное число от 1 до n. Беатриса пытается угадать это число, для этого она называет некоторые множества натуральных чисел. Август отвечает Беатрисе YES, если среди названных ей чисел есть задуманное или NO в противном случае. После нескольких заданных вопросов Беатриса запуталась в том, какие вопросы она задавала и какие ответы получила и просит вас помочь ей определить, какие числа мог задумать Август.</p>
+
+  <h4>Формат ввода</h4>
+  <p>Первая строка входных данных содержит число n — наибольшее число, которое мог загадать Август. Далее идут строки, содержащие вопросы Беатрисы. Каждая строка представляет собой набор чисел, разделенных пробелами. После каждой строки с вопросом идет ответ Августа: YES или NO. Наконец, последняя строка входных данных содержит одно слово HELP.</p>
+
+  <h4>Формат вывода</h4>
+  <p>Вы должны вывести (через пробел, в порядке возрастания) все числа, которые мог задумать Август.</p>
+
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+<pre>
+10
+1 2 3 4 5
+YES
+2 4 6 8 10
+NO
+HELP
+</pre>
+    <code>1 3 5</code>
+
+    <h4>Пример 2</h4>
+<pre>
+10
+1 2 3 4 5 6 7 8 9 10
+YES
+1
+NO
+2
+NO
+3
+NO
+4
+NO
+6
+NO
+7
+NO
+8
+NO
+9
+NO
+10
+NO
+HELP
+</pre>
+    <code>5</code>
+  </details>
+</article>
+
+
+<!-- E. Автомобильные номера -->
+<article class="article">
+  <div class="anchor" id="t5"></div>
+  <h3>E. Автомобильные номера</h3>
+
+  <div class="time-memory">(Время 2с. Память 64мб)</div>
+
+  <p>Неизвестный водитель совершил ДТП и скрылся с места происшествия. Полиция опрашивает свидетелей. Каждый из них говорит, что запомнил какие-то буквы и цифры номера. Но при этом свидетели не помнят порядок этих цифр и букв. Полиция хочет проверить несколько подозреваемых автомобилей. Будем говорить, что номер согласуется с показанием свидетеля, если все символы, которые назвал свидетель, присутствуют в этом номере (не важно, сколько раз).</p>
+
+  <h4>Формат ввода</h4>
+  <p>Сначала задано число M ⩽ 100 - количество свидетелей. Далее идет M строк, каждая из которых описывает показания очередного свидетеля. Эти строки непустые и состоят из не более чем 20 символов. Каждый символ в строке - либо цифра, либо заглавная латинская буква, причём символы могут повторяться.</p>
+  <p>Затем идёт число N ⩽ 1000 - количество номеров. Следующие строки представляют из себя номера подозреваемых машин и имеют такой же формат, как и показания свидетелей.</p>
+
+  <h4>Формат вывода</h4>
+  <p>Выпишите номера автомобилей, согласующиеся с максимальным количеством свидетелей. Если таких номеров несколько, то выведите их в том же порядке, в котором они были заданы на входе.</p>
+
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+<pre>
+3
+ABC
+A37
+BCDA
+2
+A317BD
+B137AC
+</pre>
+    <code>B137AC</code>
+
+    <h4>Пример 2</h4>
+<pre>
+2
+1ABC
+3A4B
+3
+A143BC
+C143AB
+AAABC1
+</pre>
+<pre>
+A143BC
+C143AB
+</pre>
+  </details>
+</article>
