--- a/src/components/alg/alg-ta/ta2/pages/elem-l4adz.html
+++ b/src/components/alg/alg-ta/ta2/pages/elem-l4adz.html
@@ -19,6 +19,7 @@
   <br><a href="#t2">B. Головоломка</a>
   <br><a href="#t3">C. Драгоценные камни</a>
   <br><a href="#t4">D. Числа</a>
+  <br><a href="#t5">E. Имена</a>
 </article>
 
 
@@ -182,9 +183,47 @@ bb
 
     <h4>Пример 2</h4>
 <pre>
-  123
-  456
+123
+456
 </pre>
     <code>-1</code>
+  </details>
+</article>
+
+
+<!-- E. Имена -->
+<article class="article">
+  <div class="anchor" id="t5"></div>
+  <h3>E. Имена</h3>
+
+  <div class="time-memory">(Время 1с. Память 64мб)</div>
+
+  <p>На далекой планете Тау Кита есть непонятные нам обычаи. Например, таукитяне очень необычно для землян выбирают имена своим детям. Родители так выбирают имя ребенку, чтобы оно могло быть получено как удалением некоторого набора букв из имени отца, так и удалением некоторого набора букв из имени матери. Например, если отца зовут «abacaba», а мать — «bbccaa», то их ребенок может носить имена «a», «bba», «bcaa», но не может носить имена «aaa», «ab» или «bbc». Возможно, что имя ребенка совпадает с именем отца и/или матери, если оно может быть получено из имени другого родителя удалением нескольких (возможно, ни одной) букв.</p>
+
+  <p>Пусть отец по имени X и мать по имени Y выбирают имя своему новорожденному ребенку. Так как в таукитянских школах учеников часто вызывают к доске в лексикографическом порядке имен учеников, то есть в порядке следования имен в словаре, то они хотят выбрать своему ребенку такое имя, чтобы оно лексикографически следовало как можно позже.</p>
+
+  <p>Формально, строка S лексикографически больше строки T, если выполняется одно из двух условий: строка T получается из S удалением одной или более букв с конца строки S; первые (i - 1) символов строк T и S не различаются, а буква в i-й позиции строки T следует в алфавите раньше буквы в i-й позиции строки S. Требуется написать программу, которая по именам отца и матери находит лексикографически наибольшее имя для их ребенка.</p>
+
+  <h4>Формат ввода</h4>
+  <p>Первая строка входного файла содержит X — имя отца. Вторая строка входного файла содержит Y — имя матери. Каждое имя состоит из строчных букв латинского алфавита, включает хотя бы одну букву и имеет длину не более 10<sup>5</sup> букв.</p>
+
+  <h4>Формат вывода</h4>
+  <p>Выходной файл должен содержать искомое лексикографически наибольшее из возможных имен ребенка. В случае, если подходящего имени для ребенка не существует, выходной файл должен быть пустым.</p>
+
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+<pre>
+abcabca
+abcda
+</pre>
+    <code>ca</code>
+
+    <h4>Пример 2</h4>
+<pre>
+ccba
+accbbaa
+</pre>
+    <code>ccba</code>
   </details>
 </article>
