--- a/src/components/alg/alg-ta/ta2/pages/elem-l4bdz.html
+++ b/src/components/alg/alg-ta/ta2/pages/elem-l4bdz.html
@@ -10,3 +10,311 @@
   <p><a href="https://contest.yandex.ru/contest/28970/problems/" target="_blank">contest.yandex.ru/contest/28970/problems</a></p>
 </article>
 
+
+<!-- Содержание -->
+<article class="article">
+  <h3>Содержание</h3>
+
+      <a href="#t1">A. Толя-Карп и новый набор структур, часть 2</a>
+  <br><a href="#t2">B. Выборы в США</a>
+  <br><a href="#t3">C. Частотный анализ</a>
+  <br><a href="#t4">D. Выборы Государственной Думы</a>
+  <br><a href="#t5">E. Форум</a>
+</article>
+
+
+<!-- A. Толя-Карп и новый набор структур, часть 2 -->
+<article class="article">
+  <div class="anchor" id="t1"></div>
+  <h3>A. Толя-Карп и новый набор структур, часть 2</h3>
+
+  <div class="time-memory">(Время 3с. Память 256мб)</div>
+
+  <p>Толя-Карп запросил для себя n посылок с «Аллигатор-экспресс».</p>
+
+  <p>Посылка представляет из себя ящик. Внутри ящика лежит целое число ai. Номер на ящике di указывает на цвет числа, лежащего внутри.</p>
+
+  <p>Толю-Карпа интересует, чему будут равны значения чисел, если сложить между собой все те, что имеют одинаковый цвет. Напишите, пожалуйста, программу, которая выводит результат.</p>
+
+  <h4>Формат ввода</h4>
+  <p>В первой строке одно число n (0 ≤ n ≤ 2*10<sup>5</sup>).</p>
+
+  <p>В следующих n строках заданы по два числа: цвет числа в ящике di и значение числа ai (-10<sup>18</sup> ≤ di, ai ≤ 10<sup>18</sup>).</p>
+
+  <p>Гарантируется, что сумма чисел одного цвета не превышает 10<sup>18</sup>.</p>
+
+  <h4>Формат вывода</h4>
+  <p>Выведите в порядке возрастания номера цвета пары чисел, каждая в новой строке: номер цвета и сумму всех чисел данного цвета.</p>
+
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+<pre>
+7
+1 5
+10 -5
+1 10
+4 -2
+4 3
+4 1
+4 0
+</pre>
+<pre>
+1 15
+4 2
+10 -5
+</pre>
+
+    <h4>Пример 1</h4>
+<pre>
+5
+5 -10000
+-5 100000000000
+10 2000000000000
+-5 -300000000000
+0 10000000000000
+</pre>
+<pre>
+-5 -200000000000
+0 10000000000000
+5 -10000
+10 2000000000000
+</pre>
+  </details>
+</article>
+
+
+<!-- B. Выборы в США -->
+<article class="article">
+  <div class="anchor" id="t2"></div>
+  <h3>B. Выборы в США</h3>
+
+  <div class="time-memory">(Время 2с. Память 64мб)</div>
+
+  <p>Как известно, в США президент выбирается не прямым голосованием, а путем двухуровневого голосования. Сначала проводятся выборы в каждом штате и определяется победитель выборов в данном штате. Затем проводятся государственные выборы: на этих выборах каждый штат имеет определенное число голосов — число выборщиков от этого штата. На практике, все выборщики от штата голосуют в соответствии с результами голосования внутри штата, то есть на заключительной стадии выборов в голосовании участвуют штаты, имеющие различное число голосов. Вам известно за кого проголосовал каждый штат и сколько голосов было отдано данным штатом. Подведите итоги выборов: для каждого из участника голосования определите число отданных за него голосов.</p>
+
+  <h4>Формат ввода</h4>
+  <p>Каждая строка входного файла содержит фамилию кандидата, за которого отдают голоса выборщики этого штата, затем через пробел идет количество выборщиков, отдавших голоса за этого кандидата.</p>
+
+  <h4>Формат вывода</h4>
+  <p>Выведите фамилии всех кандидатов в лексикографическом порядке, затем, через пробел, количество отданных за них голосов.</p>
+
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+<pre>
+McCain 10
+McCain 5
+Obama 9
+Obama 8
+McCain 1
+</pre>
+<pre>
+McCain 16
+Obama 17
+</pre>
+
+    <h4>Пример 2</h4>
+<pre>
+ivanov 100
+ivanov 500
+ivanov 300
+petr 70
+tourist 1
+tourist 2
+</pre>
+<pre>
+ivanov 900
+petr 70
+tourist 3
+</pre>
+
+    <h4>Пример 3</h4>
+    <code>bur 1</code>
+    <code>bur 1</code>
+  </details>
+</article>
+
+
+<!-- C. Частотный анализ -->
+<article class="article">
+  <div class="anchor" id="t3"></div>
+  <h3>C. Частотный анализ</h3>
+
+  <div class="time-memory">(Время 2с. Память 64мб)</div>
+
+  <p>Дан текст. Выведите все слова, встречающиеся в тексте, по одному на каждую строку. Слова должны быть отсортированы по убыванию их количества появления в тексте, а при одинаковой частоте появления — в лексикографическом порядке. Указание. После того, как вы создадите словарь всех слов, вам захочется отсортировать его по частоте встречаемости слова. Желаемого можно добиться, если создать список, элементами которого будут кортежи из двух элементов: частота встречаемости слова и само слово. Например, [(2, 'hi'), (1, 'what'), (3, 'is')]. Тогда стандартная сортировка будет сортировать список кортежей, при этом кортежи сравниваются по первому элементу, а если они равны — то по второму. Это почти то, что требуется в задаче.</p>
+
+  <h4>Формат ввода</h4>
+  <p>Вводится текст.</p>
+
+  <h4>Формат вывода</h4>
+  <p>Выведите ответ на задачу.</p>
+
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+<pre>
+hi
+hi
+what is your name
+my name is bond
+james bond
+my name is damme
+van damme
+claude van damme
+jean claude van damme
+</pre>
+<pre>
+damme
+is
+name
+van
+bond
+claude
+hi
+my
+james
+jean
+what
+your
+</pre>
+
+    <h4>Пример 2</h4>
+<pre>
+oh you touch my tralala
+mmm my ding ding dong
+</pre>
+<pre>
+  ding
+  my
+  dong
+  mmm
+  oh
+  touch
+  tralala
+  you
+</pre>
+
+    <h4>Пример 3</h4>
+    <code>ai ai ai ai ai ai ai ai ai ai</code>
+    <code>ai</code>
+  </details>
+</article>
+
+
+<!-- D. Выборы Государственной Думы -->
+<article class="article">
+  <div class="anchor" id="t4"></div>
+  <h3>D. Выборы Государственной Думы</h3>
+
+  <div class="time-memory">(Время 2с. Память 64мб)</div>
+
+  <p>Статья 83 закона “О выборах депутатов Государственной Думы Федерального Собрания Российской Федерации” определяет следующий алгоритм пропорционального распределения мест в парламенте.</p>
+
+  <p>Необходимо распределить 450 мест между партиями, участвовавших в выборах. Сначала подсчитывается сумма голосов избирателей, поданных за каждую партию и подсчитывается сумма голосов, поданных за все партии. Эта сумма делится на 450, получается величина, называемая “первое избирательное частное” (смысл первого избирательного частного - это количество голосов избирателей, которое необходимо набрать для получения одного места в парламенте).</p>
+
+  <p>Далее каждая партия получает столько мест в парламенте, чему равна целая часть от деления числа голосов за данную партию на первое избирательное частное.</p>
+
+  <p>Если после первого раунда распределения мест сумма количества мест, отданных партиям, меньше 450, то оставшиеся места передаются по одному партиям, в порядке убывания дробной части частного от деления числа голосов за данную партию на первое избирательное частное. Если же для двух партий эти дробные части равны, то преимущество отдается той партии, которая получила большее число голосов.</p>
+
+  <h4>Формат ввода</h4>
+  <p>На вход программе подается список партий, участвовавших в выборах. Каждая строка входного файла содержит название партии (строка, возможно, содержащая пробелы), затем, через пробел, количество голосов, полученных данной партией – число, не превосходящее 10<sup>8</sup>.</p>
+
+  <h4>Формат вывода</h4>
+  <p>Программа должна вывести названия всех партий и количество голосов в парламенте, полученных данной партией. Названия необходимо выводить в том же порядке, в котором они шли во входных данных.</p>
+
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+<pre>
+Party One 100000
+Party Two 200000
+Party Three 400000
+</pre>
+<pre>
+Party One 64
+Party Two 129
+Party Three 257
+</pre>
+
+    <h4>Пример 2</h4>
+<pre>
+Party number one 100
+Partytwo 100
+</pre>
+<pre>
+Party number one 225
+Partytwo 225
+</pre>
+
+    <h4>Пример 3</h4>
+<pre>
+Party number one 449
+Partytwo 1
+</pre>
+<pre>
+Party number one 449
+Partytwo 1
+</pre>
+  </details>
+</article>
+
+
+<!-- E. Форум -->
+<article class="article">
+  <div class="anchor" id="t5"></div>
+  <h3>E. Форум</h3>
+
+  <div class="time-memory">(Время 1с. Память 64мб)</div>
+
+  <p>Клуб Юных Хакеров организовал на своем сайте форум. Форум имеет следующую структуру: каждое сообщение либо начинает новую тему, либо является ответом на какое-либо предыдущее сообщение и принадлежит той же теме.</p>
+
+  <p>После нескольких месяцев использования своего форума юных хакеров заинтересовал вопрос - какая тема на их форуме наиболее популярна. Помогите им выяснить это.</p>
+
+  <h4>Формат ввода</h4>
+  <p>В первой строке вводится целое число N - количество сообщений в форуме (1 ≤ N ≤ 1000). Следующие строки содержат описание сообщений в хронологическом порядке.</p>
+
+  <p>Описание сообщения, которое представляет собой начало новой темы, состоит из трех строк. Первая строка содержит число 0. Вторая строка содержит название темы. Длина названия не превышает 30 символов. Третья строка содержит текст сообщения.</p>
+
+  <p>Описание сообщения, которое является ответом на другое сообщение, состоит из двух строк. Первая строка содержит целое число - номер сообщения, ответом на которое оно является. Сообщения нумеруются, начиная с единицы. Ответ всегда появляется позже, чем сообщение, ответом на которое он является. Вторая строка содержит текст сообщения.</p>
+
+  <p>Длина каждого из сообщений не превышает 100 символов.</p>
+
+  <h4>Формат вывода</h4>
+  <p>Выведите название темы, к которой относится наибольшее количество сообщений. Если таких тем несколько, то выведите первую в хронологическом порядке</p>
+
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+<pre>
+7
+0
+Олимпиада по информатике
+Скоро третья командная олимпиада?
+0
+Новая компьютерная игра
+Вышла новая крутая игра!
+1
+Она пройдет 24 ноября
+1
+В Санкт-Петербурге и Барнауле
+2
+Где найти?
+4
+Примет участие более 50 команд
+6
+Интересно, какие будут задачи
+</pre>
+    <code>Олимпиада по информатике</code>
+
+    <h4>Пример 2</h4>
+<pre>
+1
+0
+topic 1
+body 1
+</pre>
+    <code>topic 1</code>
+  </details>
+</article>
