--- a/src/components/alg/alg-ta/ta2/pages/elem-l5adz.html
+++ b/src/components/alg/alg-ta/ta2/pages/elem-l5adz.html
@@ -10,3 +10,269 @@
   <p><a href="https://contest.yandex.ru/contest/29072/problems/" target="_blank">contest.yandex.ru/contest/29072/problems</a></p>
 </article>
 
+
+<!-- Содержание -->
+<article class="article">
+  <h3>Содержание</h3>
+
+      <a href="#t1">A. Стильная одежда 2</a>
+  <br><a href="#t2">B. Сложите конфетки</a>
+  <br><a href="#t3">C. Лучшие друзья девушек - это фуллерены</a>
+  <br><a href="#t4">D. Скобки</a>
+  <br><a href="#t5">E. Странные строки</a>
+</article>
+
+
+<!-- A. Стильная одежда 2 -->
+<article class="article">
+  <div class="anchor" id="t1"></div>
+  <h3>A. Стильная одежда 2</h3>
+
+  <div class="time-memory">(Время 2с. Память 256мб)</div>
+
+  <p>Глеб обожает шоппинг. Как-то раз он загорелся идеей подобрать себе кепку, майку, штаны и ботинки так, чтобы выглядеть в них максимально стильно. В понимании Глеба стильность одежды тем больше, чем меньше разница в цвете элементов его одежды.</p>
+
+  <p>В наличии имеется N1 кепок, N2 маек, N3 штанов и N4 пар ботинок (1 ≤ Ni ≤ 100000). Про каждый элемент одежды известен его цвет (целое число от 1 до 100000). Комплект одежды — это одна кепка, майка, штаны и одна пара ботинок. Каждый комплект характеризуется максимальной разницей между любыми двумя его элементами. Помогите Глебу выбрать максимально стильный комплект, то есть комплект с минимальной разницей цветов.</p>
+
+  <h4>Формат ввода</h4>
+  <p>Для каждого типа одежды i (i = 1, 2, 3, 4) сначала вводится количество Ni элементов одежды этого типа, далее в следующей строке — последовательность из Ni целых чисел, описывающих цвета элементов. Все четыре типа подаются на вход последовательно, начиная с кепок и заканчивая ботинками. Все вводимые числа целые, положительные и не превосходят 100000.</p>
+
+  <h4>Формат вывода</h4>
+  <p>Выведите четыре целых числа — цвета соответственно для кепки, майки, штанов и ботинок, которые должен выбрать Глеб из имеющихся для того, чтобы выглядеть наиболее стильно. Если ответов несколько, выведите любой.</p>
+
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+<pre>
+3
+1 2 3
+2
+1 3
+2
+3 4
+2
+2 3
+</pre>
+    <code>3 3 3 3</code>
+
+    <h4>Пример 2</h4>
+<pre>
+1
+5
+4
+3 6 7 10
+4
+18 3 9 11
+1
+20
+</pre>
+    <code>5 6 9 20 </code>
+  </details>
+</article>
+
+
+<!-- B. Сложите конфетки -->
+<article class="article">
+  <div class="anchor" id="t2"></div>
+  <h3>B. Сложите конфетки</h3>
+
+  <div class="time-memory">(Время 2с. Память 512мб)</div>
+
+  <p>Васю угостили конфетами, а он решил частью конфет поделиться со своим младшим братом Петей. Однако он хочет разделить конфеты не поровну, а по-братски.</p>
+
+  <p>Для этого Вася решил сыграть сам с собой в следующую игру. Он разложил конфеты на столе в несколько кучек, которые расположил в ряд. Если кучек не меньше двух, то из первой и последней в этом ряду кучек он выбирает ту, в которой меньше конфет. Пусть в наименьшей кучке оказалось B конфет. Тогда он B конфет перекладывает из первой кучки во вторую, и также B конфет перекладывает из последней кучки в предпоследнюю. При этом, естественно, одна из кучек (или даже две, если в первой и последней кучках конфет было поровну) становится пустой, и Вася забывает про ее существование. Он повторяет эти операции до тех пор, пока на столе не останется одна или две кучки.</p>
+
+  <p>Если останется одна кучка, то Вася все конфеты съест сам, а если две — то конфеты из первой кучки он съест сам, а из второй кучки отдаст Пете.</p>
+
+  <p>Напишите программу, которая по исходному распределению конфет в кучках определит, чем закончится Васина игра.</p>
+
+  <h4>Формат ввода</h4>
+  <p>Начальное расположение кучек конфет будет описываться K парами чисел Ai, Ni, которые обозначают, что на столе выложено подряд Ni кучек конфет, по Ai конфет в каждой.</p>
+
+  <p>Во входном файле задано сначала число K (1 ≤ K ≤ 10<sup>5</sup>). Затем идет K пар чисел Ai, Ni (1 ≤ Ai ≤ 100, 1 ≤ Ni ≤ 10<sup>8</sup>). Общее количество кучек так же не превысит 10<sup>8</sup>.</p>
+
+  <h4>Формат вывода</h4>
+  <p>В выходной файл выведите сначала 1 или 2 — количество кучек конфет, которые останутся в конце игры. Затем выведите соответственно одно или два числа — количества конфет в оставшихся кучках.</p>
+
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+<pre>
+3
+2 2
+3 2
+2 1
+</pre>
+<pre>
+2
+11 1
+</pre>
+
+    <h4>Пример 2</h4>
+<pre>
+1
+1 7
+</pre>
+<pre>
+1
+7
+</pre>
+
+    <h4>Пример 3</h4>
+<pre>
+5
+1 1
+2 1
+3 1
+4 1
+5 2
+</pre>
+<pre>
+2
+15 5
+</pre>
+  <p>1. Исходно конфеты расположены в следующих кучках: 2 кучки по 2 конфеты, две кучки из 3-х конфет и одна из 2-х:</p>
+  <code>2 2 3 3 2</code>
+
+  <p>Далее по 2 конфеты перекладывается из 1 и 5кучек во 2 и 4, при этом и 1 и 5 кучки становятся пустыми, т.е. на столе остается только 3 кучки:</p>
+  <code>4 3 5</code>
+
+  <p>Теперь по 4 конфеты перекладываются из 1 и 3 кучек во 2-ю и на столе остается две кучки, игра заканчивается с результатом 11 1</p>
+
+  <p>2. Изначально у нас 7 кучек по 1 конфете в каждой. После первого перекладывания получится следующая конфигурация:</p>
+  <code>2 1 1 1 1 2</code>
+
+  <p>После второго:</p>
+  <code>3 1 3</code>
+
+  <p>После третьего останется одна кучка с 7 конфетами.</p>
+
+  <p>3. Изначально имеется 6 кучек:</p>
+  <code>1 2 3 4 5 5</code>
+
+  <p>После первого перекладывания получим:</p>
+  <code>3 3 4 6 4</code>
+
+  <p>После второго:</p>
+  <code>6 4 9 1</code>
+
+  <p>После третьего:</p>
+  <code>5 5 10</code>
+
+  <p>Наконец, получим:</p>
+  <code>15 5</code>
+  </details>
+</article>
+
+
+<!-- C. Лучшие друзья девушек - это фуллерены -->
+<article class="article">
+  <div class="anchor" id="t3"></div>
+  <h3>C. Лучшие друзья девушек - это фуллерены</h3>
+
+  <div class="time-memory">(Время 3с. Память 64мб)</div>
+
+  <p>Развитие химической науки привело к тому, что высшие фуллерены (сложные молекулы углерода в виде шарика или продолговатой трубки) стали недорогими в производстве. Благодаря своим уникальным оптическим свойствам они нашли свое место и в ювелирной промышленности. Ювелирный дом «Кёрл, Крото и Смолли» выпустил уникальную коллекцию украшений из фуллеренов. Украшение продается в виде набора трубок-фуллеренов различной длины, из которых можно составить украшение самостоятельно.</p>
+
+  <p>Норма Джин очень любит сложные углеродные соединения и купила себе набор фуллеренов для составления украшений. Ее фирменный стиль состоит в том, чтобы носить украшения, составленные ровно из трех трубок фуллерена, причем в результате должен получаться тупоугольный треугольник. Норма Джин — объект постоянной охоты папарацци, поэтому не может позволить себе дважды появиться на людях с одним и тем же украшением.</p>
+
+  <p>Помогите Норме Джин узнать, сколько вечеров она сможет посетить с имеющимся у нее набором фуллереновых трубок. Фуллереновые трубки одинаковой длины считаются различными. Треугольники считаются различными, если они отличаются хотя бы одной трубкой. Треугольники, состоящие из одних и тех же трубок, считаются одинаковыми независимо от порядка трубок.</p>
+
+  <h4>Формат ввода</h4>
+  <p>Первая строка входного файла содержит одно число N (1 ≤ N ≤ 5000) — количество фуллереновых трубок в наборе Нормы Джин.</p>
+
+  <p>Вторая строка содержит N упорядоченных по возрастанию целых чисел Li (1 ≤ Li ≤ 2 x 10<sup>9</sup>).</p>
+
+  <h4>Формат вывода</h4>
+  <p>Выведите одно целое число — количество вечеров, на которые сможет сходить Норма Джин.</p>
+
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+<pre>
+4
+2 2 3 4
+</pre>
+    <code>3</code>
+  </details>
+</article>
+
+
+<!-- D. Скобки -->
+<article class="article">
+  <div class="anchor" id="t4"></div>
+  <h3>D. Скобки</h3>
+
+  <div class="time-memory">(Время 1с. Память 64мб)</div>
+
+  <p>Юная программистка Агнесса недавно узнала на уроке информатики об арифметических выражениях. Она заинтересовалась вопросом, что случится, если из арифметического выражения удалить всё, кроме скобок. Введя запрос в своём любимом поисковике, она выяснила, что математики называют последовательности скобок, которые могли бы встречаться в некотором арифметическом выражении, правильными скобочными последовательностями.</p>
+
+  <p>Так, последовательность ()(()) является правильной скобочной последовательностью, потому что она может, например, встречаться в выражении (2+2) : (3–(5–2)+4), а последовательности (() и ())( не являются таковыми. Легко видеть, что существует пять правильных скобочных последовательностей, состоящих ровно из шести скобок (по три скобки каждого типа — открывающих и закрывающих): ((())), (()()), (())(), ()(()) и ()()().</p>
+
+  <p>Агнесса заинтересовалась простейшими преобразованиями правильных скобочных последовательностей. Для начала Агнесса решила ограничиться добавлением скобок в последовательность. Она очень быстро выяснила, что после добавления одной скобки последовательность перестаёт быть правильной, а вот добавление двух скобок иногда сохраняет свойство правильности. Например, при добавлении двух скобок в различные места последовательности ()() можно получить последовательности (()()), (())(), ()(()) и ()()(). Легко видеть, что при любом способе добавления двух скобок с сохранением свойства правильности одна из новых скобок должна быть открывающей, а другая — закрывающей.</p>
+
+  <p>Агнесса хочет подсчитать количество различных способов добавления двух скобок в заданную правильную скобочную последовательность так, чтобы снова получилась правильная скобочная последовательность. К сожалению, выяснилось, что это количество может быть в некоторых случаях очень большим. Агнесса различает способы получения последовательности по позициям добавленных скобок в полученной последовательности. Например, даже при добавлении скобок в простейшую последовательность () можно получить другую правильную скобочную последовательность семью способами: ()(), (()), (()), (()), (()), ()(), ()(). Здесь добавленные скобки выделены жирным шрифтом.</p>
+
+  <p>Таким образом, если в полученной последовательности добавленная открывающая скобка стоит в позиции i, а добавленная закрывающая — в позиции j, то два способа, соответствующие парам (i1, j1) и (i2, j2), считаются различными, если i1 = i2 или j1 = j2.</p>
+
+  <p>Требуется написать программу, которая по заданной правильной скобочной последовательности определяет количество различных описанных выше способов добавления двух скобок.</p>
+
+  <h4>Формат ввода</h4>
+  <p>Входной файл состоит из одной непустой строки, содержащей ровно 2n символов: n открывающих и n закрывающих круглых скобок. Гарантируется, что эта строка является правильной скобочной последовательностью.</p>
+
+  <h4>Формат вывода</h4>
+  <p>Выведите в выходной файл количество различных способов добавления в заданную последовательность двух скобок таким образом, чтобы получилась другая правильная скобочная последовательность.</p>
+
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+    <code>()</code>
+    <code>7</code>
+
+    <h4>Пример 2</h4>
+    <code>()()</code>
+    <code>14</code>
+
+    <h4>Пример 3</h4>
+    <code>(())</code>
+    <code>21</code>
+  </details>
+</article>
+
+
+<!-- E. Странные строки -->
+<article class="article">
+  <div class="anchor" id="t5"></div>
+  <h3>E. Странные строки</h3>
+
+  <div class="time-memory">(Время 1с. Память 64мб)</div>
+
+  <p>Рассмотрим строку s, состоящую из строчных букв латинского алфавита. Примером такой строки является, например, строка «abba».</p>
+
+  <p>Подстрокой строки s называется строка, составленная из одного или нескольких подряд идущих символов строки s. Обозначим как W(s) множество, состоящее из всех возможных подстрок строки s. При этом каждая подстрока входит в это множество не более одного раза, даже если она встречается в строке s несколько раз.</p>
+
+  <p>Например, W(«abba») = «a», «b», «ab», «ba», «bb», «abb», «bba», «abba».</p>
+
+  <p>Подпоследовательностью строки s называется строка, которую можно получить из s удалением произвольного числа символов. Обозначим как Y(s) множество, состоящее из всех возможных подпоследовательностей строки s. Аналогично W(s), каждая подпоследовательность строки s включается в Y(s) ровно один раз, даже если она может быть получена несколькими способами удаления символов из строки s. Поскольку любая подстрока строки s является также ее подпоследовательностью, то множество Y(s) включает в себя W(s), но может содержать также и другие строки.</p>
+
+  <p>Например, Y(«abba») = W(«abba») ∪ «aa», «aba». Знак ∪ обозначает объединение множеств.</p>
+
+  <p>Будем называть строку s странной, если для нее W(s) = Y(s). Так, строка «abba» не является странной, а, например, строка «abb» является, так как для нее W(«abb») = Y(«abb») = «a», «b», «ab», «bb», «abb».</p>
+
+  <p>Будем называть странностью строки число ее различных странных подстрок. При вычислении странности подстрока считается один раз, даже если она встречается в строке s в качестве подстроки несколько раз. Так, для строки «abba» ее странность равна 7, любая ее подстрока, кроме всей строки, является странной.</p>
+
+  <p>Требуется написать программу, которая по заданной строке s определяет ее странность.</p>
+
+  <h4>Формат ввода</h4>
+  <p>Входной файл содержит строку s, состоящую из строчных букв латинского алфавита. Строка имеет длину от 1 до 200 000.</p>
+
+  <h4>Формат вывода</h4>
+  <p>Выходной файл должен содержать одно целое число: странность заданной во входном файле строки.</p>
+
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+    <code>ab</code>
+    <code>3</code>
+  </details>
+</article>
