--- a/src/components/alg/alg-ta/ta2/pages/elem-l5bdz.html
+++ b/src/components/alg/alg-ta/ta2/pages/elem-l5bdz.html
@@ -10,3 +10,97 @@
   <p><a href="https://contest.yandex.ru/contest/29075/problems/" target="_blank">contest.yandex.ru/contest/29075/problems</a></p>
 </article>
 
+
+<!-- Содержание -->
+<article class="article">
+  <h3>Содержание</h3>
+
+      <a href="#t1">A. Префиксные суммы</a>
+  <br><a href="#t2">B. Максимальная сумма</a>
+  <br><a href="#t3">C. Каждому по компьютеру</a>
+</article>
+
+
+<!-- A. Префиксные суммы -->
+<article class="article">
+  <div class="anchor" id="t1"></div>
+  <h3>A. Префиксные суммы</h3>
+
+  <div class="time-memory">(Время 3с. Память 256мб)</div>
+
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+<pre>
+4 10
+1 2 3 4
+1 1
+1 2
+1 3
+1 4
+2 2
+2 3
+2 4
+3 3
+3 4
+4 4
+</pre>
+<pre>
+1
+3
+6
+10
+2
+5
+9
+3
+7
+4
+</pre>
+  </details>
+</article>
+
+
+<!-- B. Максимальная сумма -->
+<article class="article">
+  <div class="anchor" id="t2"></div>
+  <h3>B. Максимальная сумма</h3>
+
+  <div class="time-memory">(Время 3с. Память 256мб)</div>
+
+  <p>В этой задаче вам требуется найти непустой отрезок массива с максимальной суммой.</p>
+
+  <h4>Формат ввода</h4>
+  <p>В первой строке входных данных записано единственное число n (1 ≤ n ≤ 3⋅10<sup>5</sup>) -  размер массива.</p>
+
+  <p>Во второй строке записано n целых чисел ai (-10<sup>9</sup> ≤ ai ≤ 10<sup>9</sup>) - сам массив.</p>
+
+  <h4>Формат вывода</h4>
+  <p>Выведите одно число - максимальную сумму на отрезке в данном массиве.</p>
+
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+<pre>
+4
+1 2 3 4
+</pre>
+    <code>10</code>
+
+    <h4>Пример 2</h4>
+<pre>
+4
+5 4 -10 4
+</pre>
+    <code>9</code>
+  </details>
+</article>
+
+
+<!-- C. Каждому по компьютеру -->
+<article class="article">
+  <div class="anchor" id="t3"></div>
+  <h3>C. Каждому по компьютеру</h3>
+
+  <div class="time-memory">(Время 1с. Память 64мб)</div>
+</article>
